--- a/chap3.tex
+++ b/chap3.tex
@@ -12,10 +12,35 @@ Technological Realities (27 p)
 %% -some stakes (data) are still applicable, but others may be
 %% ameliorated
 
-%% if this will still be long enough, consider eliminating automation
-%% and AI from this section and moving them back to ch 1. then these
-%% alternative narratives are really not all the alts, but they are
-%% those alts that are pretty much never referenced . . . 
+Most automated vehicle narratives---and all those we have investigated
+so far---rest on two primary, interlocking assumptions. First, the nature of the
+ideal human-machine interaction for vehicle control is assumed to be
+known. Second, an inevitable progression toward not only greater
+autonomy but complete autonomy is assumed as the
+starting point of these arguments. Rarely if ever does the question of
+how much autonomy or supervision to provide to the automated system
+enter the discussion as an engineering parameter over which designers
+have control, and which should be responsive to larger goals. Instead,
+advanced driver-assistance technologies and fully-self-driving
+operation with no need for human supervision are recognized as
+technologically connected, but perceived as fundamentally dichotomous
+approaches. Fully-self-driving operation is considered---often via a
+speculative or ideological basis---either good or not-good compared to
+current vehicles with driver-assistance technologies; it is not generally
+perceived as the upper bound on a spectrum of automation
+approaches.\footnote{And as we will see in this chapter, even
+  so-called ``full'' autonomy would not, in practice, be so simply
+  disconnected from human oversight.} And through all this,
+fully-automated operation is assumed to be the ultimate end goal, in a
+realm of complete technological possibility: the ideal human-machine
+interaction is, in a sense, no human-machine interaction. As I have
+outlined, this perspective comes from particular roots (automation
+history, artificial intelligence, science fiction), but is not the
+only way to envision automated systems. There is a deep history of
+work in human supervisory control (HSC) that has great implications
+for the real-world design of automated systems, and which tells a
+potentially very different story about what automated vehicle
+operation will look like from a ``driver's'' point of view.
 
 \subsection{Human Supervisory Control}
 
@@ -51,6 +76,11 @@ involved somewhere along the line, in their programming, production,
 and use, though it makes sense that the military, focused as it is on
 human command hierarchies, would find it especially important to make
 this apparent. 
+
+EVEN ``FULL AUTONOMY'' is not likely to be so simply full; got to have
+a stop/abort button! if so, that implies some human oversight, which
+means you have to start questioning how much, when, and how is it
+regulated or supported?
 
 \subsection{Lessons from Autonomy Research}
 
