--- a/main.bib
+++ b/main.bib
@@ -299,6 +299,24 @@
    note = "http://www.slate.com/articles/technology/technology/2014/10/google\_self\_driving\_car\_it\_may\_never\_actually\_happen.single.html",
 }
 
+@ARTICLE{harrisNevada,
+   author = "Mark Harris",
+   title = "{H}ow {G}oogle's {A}utonomous {C}ar {P}assed the {F}irst {U}.{S}. {S}tate {S}elf-{D}riving {T}est",
+   journal = "IEEE Spectrum",
+   month = "September 10",
+   year = 2014,
+   note = "http://spectrum.ieee.org/transportation/advanced-cars/how-googles-autonomous-car-passed-the-first-us-state-selfdriving-test/",
+}
+
+@ARTICLE{carneyMiles,
+   author = "Kristen Carney",
+   title = "{R}oad {M}iles by {S}tate",
+   journal = "Cubit's Blog",
+   month = "February 9",
+   year = 2010,
+   note = "http://blog.cubitplanning.com/2010/02/road-miles-by-state/",
+}
+
 @ARTICLE{gomesObstacles,
    author = "Lee Gomes",
    title = "{H}idden {O}bstacles for {G}oogle's {S}elf-{D}riving {C}ars",
@@ -653,6 +671,109 @@
    journal = "{NASA} Website",
    note = "http://ntrs.nasa.gov/archive/nasa/casi.ntrs.nasa.gov/20100017272.pdf",
 }
+
+@ARTICLE{COJCosteja,
+   author = "Court of Justice of the European Union",
+   title = "{P}ress {R}elease {N}o. 70/14",
+   year = 2014,
+   publisher = "Luxembourg",
+   month = "May 13",
+}
+
+@ARTICLE{powlesChaparro,
+   author = "Julia Powles and Enrique Chaparro",
+   title = "{H}ow {G}oogle {D}etermined {O}ur {R}ight to be {F}orgotten",
+   journal = "The Guardian",
+   year = 2015,
+   month = "February 18",
+   note = "http://www.theguardian.com/technology/2015/feb/18/the-right-be-forgotten-google-search",
+}
+
+@ARTICLE{kayyaliEFF,
+   author = "Nadi Kayyali",
+   title = "{EFF} {S}ubmits {L}etter {O}pposing {O}akland's {D}omain {A}wareness {C}enter",
+   journal = "Electronic Frontier Foundation",
+   year = 2014,
+   month = "February 18",
+   note = "https://www.eff.org/deeplinks/2014/02/eff-submits-letter-opposing-oaklands-domain-awareness-center",
+}
+
+@ARTICLE{zetter,
+   author = "Kim Zetter",
+   title = "{H}ackers {C}an {M}ess {W}ith {T}raffic {L}ights to {J}am {R}oads and {R}eroute {C}ars",
+   journal = "Wired",
+   year = 2014,
+   month = "April 30",
+   note = "http://www.wired.com/2014/04/traffic-lights-hacking",
+}
+
+@ARTICLE{goodman,
+   author = "Marc Goodman",
+   title = "{T}he time a hacker remotely bricked cars in {T}exas",
+   journal = "BoingBoing",
+   year = 2015,
+   month = "February 24",
+   note = "http://boingboing.net/2015/02/24/the-time-a-hacker-remotely-bri.html",
+}
+
+@ARTICLE{poulsenHacker,
+   author = "Kevin Poulsen",
+   title = "{H}acker {D}isables {M}ore {T}han 100 {C}ars {R}emotely",
+   journal = "Wired",
+   year = 2010,
+   month = "March 17",
+   note = "http://www.wired.com/2010/03/hacker-bricks-cars/",
+}
+
+@ARTICLE{bigelow14,
+   author = "Pete Bigelow",
+   title = "{A} 14-year-old hacker caught the auto industry by surprise",
+   journal = "AutoBlog",
+   year = 2015,
+   month = "February 18",
+   note = "http://www.autoblog.com/2015/02/18/14-year-old-hacker-caught-industry-by-surprise-featured/",
+}
+
+@UNPUBLISHED{ICO,
+   author = "Information Commissioner's Office",
+   title = "Summary of Costeja",
+   note = "https://iconewsblog.files.wordpress.com/2014/05/key-points-of-cjeu-case.pdf",
+}
+
+@BOOK{Neuromancer1984,
+   author = "William Gibson",
+   title = "Neuromancer",
+   publisher = "Penguin",
+   address = "New York",
+   year = "2000",
+}
+
+@BOOK{nissenbaum,
+   author = "Helen Nissenbaum",
+   title = "{P}rivacy in {C}ontext: {T}echnology, {P}rivacy, and the {I}ntegrity of {S}ocial {L}ife",
+   publisher = "Stanford Law Books",
+   address = "Stanford, California",
+   year = "2010",
+}
+
+@BOOK{SLAMbook,
+   author = "Juan-Antonio Fern\'{a]ndez-Madrigal and Jos\'{e} Luis Blanco Claraco",
+   title = "{S}imultaneous {L}ocalization and {M}apping for {M}obile {R}obots: {I}ntroduction and {M}ethods",
+   publisher = "IGI Global",
+   address = "Hershey, Pennsylvania",
+   year = "2013",
+   note = "eBook Collection (EBSCOhost), EBSCOhost (accessed February 26, 2015).",
+}
+
+@ARTICLE{ulmerVITA,
+   author = "Berthold Ulmer",
+   title = "{VITA} - {A}n {A}utonomous {R}oad {V}ehicle ({ARV}) for {C}ollision {A}voidance in {T}raffic",
+   journal = "Proceedings of the Intelligent Vehicles '94 Symposium",
+   year = 1994,
+   pages = "36--41",
+}
+
+
 
 
 
